--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "coinsmate-liquidity-tracker",
   "version": "0.1.0",
@@ -10,6 +9,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "test": "react-scripts test"
+  },
+  "devDependencies": {
+    "@babel/traverse": "^7.27.4",
+    "@testing-library/react": "^16.3.0",
+    "jest": "^27.5.1"
   }
 }
